1-OkHttpManager 增加特殊请求头；2-新增SHA256算法 用于请求头加密；3-任务中心完善；4-扫描入口重构包裹打包、新增新建包裹功能；5-新增司机角色；

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,4 +146,5 @@
     <string name="hint_select_type_of_express">点击选择物品类型</string>
     <string name="rmb">RMB</string>
     <string name="kg">kg</string>
+    <string name="hint_enter_express_id_for_search">输入准确快递单号查询</string>
 </resources>
