0-增加app logo；1-收件扫描选择客户时逻辑优化；2-我的页面新增logo标识和权限管理

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="rmb">RMB</string>
     <string name="kg">kg</string>
     <string name="hint_enter_express_id_for_search">输入准确快递单号查询</string>
+    <string name="hint_customer_selected">提示：点击即可选中客户;长按可进入编辑页面 \t\t\t\t 【知道啦】</string>
 </resources>
